# Econometria

./: .gitignore  README.md  pyproject.toml
TP1/: .Rhistory  Tp.Rmd  Tp.html  Tp1-P1.Rmd  Tp1-P1.html  Tp1-P1.nb.html  Tp1-P1.nd.html  Tp1-P2.Rmd  Tp1-P2.nb.html  Tp1.Rmd  Tp1.ipynb  Tp1.nb.html  codigotp1.R  funciones.R  tp1.R
