[tool.poetry]
name = "econometria"
version = "0.1.0"
description = ""
authors = ["KenetC <kenetchape@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
